--- a/public/assets/admin/css/custom.css
+++ b/public/assets/admin/css/custom.css
@@ -139,6 +139,10 @@ input.no-label-error~label.error {
     gap: 1em;
 }
 
+.white-space-normal {
+    white-space: normal !important;
+}
+
 .custom-switch-input.disabled~.custom-switch-indicator {
     background: rgb(202, 202, 202) !important;
     border-color: var(--light-gray) !important;
@@ -188,6 +192,17 @@ select[readonly].select2-hidden-accessible + .select2-container .select2-selecti
 {
     height: 100%;
     margin-right: 50px;
+}
+
+.btn-primary:not(:disabled):not(.disabled).active, .btn-primary:not(:disabled):not(.disabled):active, .show>.btn-primary.dropdown-toggle
+{
+    background-color: var(--first-color);
+    border-color: var(--first-color);
+}
+
+a.dropdown-item:focus, a.dropdown-item:active, a.dropdown-item.active
+{
+    background-color: rgba(var(--first-color-opacity), 0.7);
 }
 
 
