--- a/public/assets/admin/css/custom.css
+++ b/public/assets/admin/css/custom.css
@@ -1297,6 +1297,8 @@ div:where(.swal2-container) button:where(.swal2-styled).swal2-confirm {
     display: flex;
     flex-direction: column;
     gap: 15px;
+    overflow: auto;
+    max-height: 470px;
 }
 
 
@@ -1310,8 +1312,8 @@ div:where(.swal2-container) button:where(.swal2-styled).swal2-confirm {
 .sections-list-container .course-section-box {
     padding: 20px 0;
     min-width: 100%;
+    height: auto;
     border-radius: 3px;
-    overflow: auto;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.103);
     display: flex;
 }
@@ -1355,7 +1357,8 @@ div:where(.swal2-container) button:where(.swal2-styled).swal2-confirm {
     min-width: 135px;
     height: 100%;
     display: flex;
-    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     gap: 10px;
 }
 
