--- a/public/assets/aula/css/custom.css
+++ b/public/assets/aula/css/custom.css
@@ -2014,7 +2014,7 @@ fieldset .box-quiz-body .box-answers {
     opacity: 1;
 }
 
-/* 
+/*
 #progressbar
 .progress-btn {
     margin: 0 calc(100%/(var(--progressWidth)*2.5));
@@ -2141,7 +2141,7 @@ fieldset .box-quiz-body .box-answers {
     display: none;
 }
 
-.draggable.without_image span 
+.draggable.without_image span
 {
     width: 100%;
     height: 100%;
@@ -3492,6 +3492,31 @@ button.btn-survey-submit:hover,
 
 #instructions-modal .modal-body ul li {
     padding-bottom: 0.5em;
+}
+
+
+
+
+
+
+
+
+
+/* ------- SPEC COURSES --------- */
+
+.index-module-title
+{
+    color: var(--first-color);
+    font-size: 1.3em;
+    font-weight: bold;
+}
+
+.module-title
+{
+    color: var(--second-color);
+    font-style: italic;
+    font-size: 1.2em;
+    border-bottom: 2px dashed rgba(0, 0, 0, 0.315);
 }
 
 
